Resolved overflow issue on mobile devices

--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -45,6 +45,7 @@
       color: var.$secondary-color;
     }
     .project-stack {
+      flex-wrap: wrap;
       margin-top: 2rem;
       padding-top: 1rem;
       border-top: 1px solid var.$accent-color;
